--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,3 +25,12 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+
+archives:
+- builds:
+  - kubectl-dds
+  name_template: "{{ .ProjectName }}_{{ .Tag }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+  wrap_in_directory: false
+  format: tar.gz
+  files:
+  - LICENSE
