--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,5 +20,7 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Update new version in krew-index
-      #   uses: rajatjindal/krew-release-bot@v0.0.43
+      - name: Update new version in krew-index
+        uses: rajatjindal/krew-release-bot@v0.0.43
+        env:
+          KREW_RELEASE_BOT_WEBHOOK_URL: "https://krew-release-bot-dryrun.rajatjindal.com/github-action-webhook"
